<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative"
    android:background="#fff"
    android:gravity="center_vertical">

    <TextView
        android:textSize="30dp"
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:textSize="36dp"
        android:text="@string/view1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#42A1BD"
        android:gravity="center_horizontal"
        android:id="@+id/textView"
        android:layout_below="@+id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp" />

    <EditText
        android:textSize="55dp"
        android:id="@+id/accumulated_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:textSize="36dp"
        android:text="@string/view3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="#42A1BD"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stop it!"
        android:id="@+id/btnEndService"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/button_community"
        android:layout_alignStart="@+id/button_community" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Track me!"
        android:id="@+id/btnStartService"
        android:gravity="center_vertical"
        android:layout_alignTop="@+id/btnEndService"
        android:layout_toLeftOf="@+id/btnEndService"
        android:layout_toStartOf="@+id/btnEndService" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test gps"
        android:id="@+id/btnGPS"
        android:layout_below="@+id/btnStartService"
        android:layout_centerHorizontal="true"
        android:onClick="testGPS"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_history"
        android:id="@+id/button_history"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actkarma_name"
        android:id="@+id/button_actkarma"
        android:layout_toRightOf="@+id/button_history"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/community_name"
        android:id="@+id/button_community"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button_actkarma"
        android:layout_toRightOf="@+id/button_actkarma" />


</RelativeLayout>
